--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,9 @@ dataset:
   y_val: '/12tb_dsk1/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/y_val.csv'
 
 
+model_output: 
+  model_save_dir: '/12tb_dsk1/danish/Pytorch_Biologically_Informed_Neural_Network/model_save/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/'
+
 train:
   epochs: 100
   learning_rate: 0.001
