--- a/config.yml
+++ b/config.yml
@@ -1,18 +1,18 @@
 # config.yml
 dataset:
-  train: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/train.csv'
-  test: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/test.csv'
-  val: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/val.csv'
-  y_train: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/y_train.csv'
-  y_test: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/y_test.csv'
-  y_val: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/y_val.csv'
+  train: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/train.csv'
+  test: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/test.csv'
+  val: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/val.csv'
+  y_train: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/y_train.csv'
+  y_test: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/y_test.csv'
+  y_val: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/Preprocessed_data/excitory_neurons/y_val.csv'
 
 
 model_output: 
-  model_save_dir: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/model_save/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/'
+  model_save_dir: '/12tb_dsk2/danish/Pytorch_Biologically_Informed_Neural_Network/model_save/excitory_neurons/'
 
 train:
-  epochs: 300
+  epochs: 200
   learning_rate: 0.001
   weight_decay: 0.01
   batch_size: 8192
@@ -21,20 +21,20 @@ gene_expression:
   highly_expressed_threshold: 0.85
   lowly_expressed_threshold: 0.85
   normalization: True
-  marker: False
+  marker: True
   print_information: True
 
 pathways_network:
   species: 'human'
   n_hidden_layer: 5
-  pathway_relation: '/12tb_dsk1/usman/CellTICS/reactome/ReactomePathwaysRelation.txt'
-  pathway_names: '/12tb_dsk1/usman/CellTICS/reactome/ReactomePathways.txt'
-  ensemble_pathway_relation: '/12tb_dsk1/usman/CellTICS/reactome/Ensembl2Reactome_All_Levels.txt'
+  pathway_relation: './reactome/ReactomePathwaysRelationReverse.txt'
+  pathway_names: './reactome/ReactomePathways.txt'
+  ensemble_pathway_relation: './reactome/Ensembl2Reactome_All_Levels.txt'
   datatype: 'diagnosis'
-  h_thresh: 0.95
-  l_thresh: 0.01
-  pathway_relation_updated: '/12tb_dsk1/usman/CellTICS/reactome/Subset_reactomePathwaysRelation.txt'
-  ensemble_pathway_relation_updated: '/12tb_dsk1/usman/CellTICS/reactome/Subset_Ensembl2Reactome_All_Levels.txt'
+  h_thresh: 1.0
+  l_thresh: 0.0
+  pathway_relation_updated: './reactome/Subset_reactomePathwaysRelation.txt'
+  ensemble_pathway_relation_updated: './reactome/Subset_Ensembl2Reactome_All_Levels.txt'
 
 
 
